# toto-scraper

./: .gitignore  .pre-commit-config.yaml  compose.yml
backend/: pyproject.toml
backend/app/: main.py
