[tool.poetry]
name = "toto-scraper"
version = "0.1.0"
description = ""
authors = ["Wilson <fcsie55@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
pytz = "^2024.2"
minio = "^7.2.10"
fastapi = { extras = ["standard"], version = "^0.115.4" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
